# softhsm-tokens

sgx/: CMakeLists.txt  CryptoHandler.cpp  CryptoHandler.h  KeyHandler.cpp  KeyHandler.h  Makefile  Makefile.am  Makefile.in  ObjectHandler.cpp  ObjectHandler.h  README.md  SgxToken.cpp  SgxTokenModule.cpp  Token.h  TokenExtension.h
